# roi_stream_py

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
examples/: rois.csv  rois_random.csv
src/roi_stream/: __init__.py  capture.py  cli.py  config.py  devices.py  gui_app.py  perf.py  roi.py  roi_stream_gui.py  shared.py  stream.py  utilities.py  writer.py
tests/: conftest.py  gui_app_imgui_cases.py  gui_app_imgui_harness.py  test_gui_imgui_engine.py  test_gui_smoke.py  test_roi_masks.py  test_to_uint16_gray.py  test_trace_ring.py  test_writer.py
